- Fixed bug #20424 (stream_get_meta_data craches on a normal file stream).   (Derick, Wez)